deriving-0.1.1/tests/rejected/alias.ml
(* Alias variable names must be distinct from parameter names *)
type 'a x = [`Foo] as 'a
    deriving (Eq)
